# KodoReader

./: .gitignore  LICENSE  README.md  Restart Kodo.bat  Start Kodo.bat  Stop Kodo.bat  config.json  package-lock.json  package.json  patch_backend.js  plan.txt
_electron_backup/: main.js  preload.js
_electron_backup/example/: hiperdex_scraper.py  index.html  main.py  renamer.py
client/: app_lint.json  build_log.txt  debug.cjs  index.html  lint.json  package-lock.json  package.json  reader_lint.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx  runtime.js
client/src/assets/: empty file transparent.lottie
client/src/components/: AddSeriesModal.jsx  BackupPasswordModal.jsx  BookmarksPage.jsx  CustomDropdown.jsx  ExportBackupModal.jsx  GDriveRestoreModal.jsx  ImageCompressor.jsx  Library.jsx  MangaDetail.jsx  ModelSetupScreen.jsx  Reader.jsx  SeriesRenamer.jsx  SettingsPage.jsx  Sidebar.jsx  TitleBar.jsx  UpscaleProgress.jsx  Upscaler.jsx
scripts/: copy-node-runtime.cmd  gen_bookmark_screenshots.py
server/: backup.js  compressor.js  gdrive.js  index.js  out.txt  package-lock.json  package.json  upscaler.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
